Fixed div width and padding so that it's always 100 vw on mobile

--- a/src/components/portrait/SectionPortrait/SectionPortrait.css
+++ b/src/components/portrait/SectionPortrait/SectionPortrait.css
@@ -34,7 +34,7 @@
 .sectionPortrait > .content > div {
     /* width: 100%; */
     /* border: 1px solid black; */
-    padding: 2%;
+    /* padding: 2%; */
     display: flex;
     justify-content: center;
     align-items: center;
